# job-queue-rs

./:   docker-compose.yml  .gitignore  Cargo.toml  README.md
  .github/workflows/: ci.yml
.github/workflows/: ci.yml
crates/queue-cli/: Cargo.toml
crates/queue-cli/src/: main.rs
crates/queue-core/: Cargo.toml
crates/queue-core/src/: error.rs  job.rs  lib.rs  store.rs
crates/queue-server/: Cargo.toml
crates/queue-server/crates/queue-server/src/: config.rs
crates/queue-server/src/: app.rs  auth.rs  config.rs  main.rs  metrics.rs  rate_limit.rs
crates/queue-server/src/store/: postgres.rs
crates/queue-server/tests/: postgres_integration.rs
crates/queue-worker/: Cargo.toml
crates/queue-worker/crates/queue-worker/src/: lib.rs
crates/queue-worker/src/: lib.rs  main.rs
migrations/: 0001_create_jobs.sql  0002_add_priority.sql  0003_enqueue_idempotency.sql
src/: strong.hodl
