[package]
name = "queue-server"
version = "0.1.0"
edition = "2024"

[dependencies]
queue-core = { path = "../queue-core" }
async-trait = "0.1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower-http = { version = "0.5", features = ["trace"] }
