[package]
name = "queue-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
queue-core = { path = "../queue-core" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
futures = "0.3"
